--- a/css/picstyles.css
+++ b/css/picstyles.css
@@ -7,10 +7,6 @@ h3 {
   color: #084E5F;
 }
 
-body {
-  text-align: center;
-}
-
 ul {
   list-style-position: inside;
 }
@@ -18,4 +14,8 @@ ul {
 img {
   width: 350px;
   height: auto;
+}
+
+li {
+  font-size: 24px;
 }
