--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,13 @@
-h1 {
+body {
   color: #033B49;
   background-color: #F2F7C6;
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h3 {
   color: #084E5F;
-}
-
-body {
-  text-align: center;
+  font-style: italic;
 }
 
 ul {
